# http-request

./: .gitmodules  CMakeLists.txt
channels/qt/: CMakeLists.txt  qchannel.cpp  qtchannel.cpp  reply.cpp  reply.hpp
channels/uv/: CMakeLists.txt  request.cpp  request.hpp  uvchannel.cpp  uvhttpchannel.cpp
example/: CMakeLists.txt  main.cpp  qmain.cpp  uvmain.cpp
include/httprequest/: channel.hpp  client.hpp  iresponse-delegate.hpp  reply.hpp  response.hpp  serializers.hpp  types.hpp
include/httprequest/channels/: qchannel.hpp  uvchannel.hpp
include/httpxx-request/: channel.hpp  client.hpp  irequest-reader.hpp  iresponse-delegate.hpp  request.hpp  serializers.hpp  types.hpp
include/httpxx-request/channels/: qchannel.hpp  qtchannel.hpp  uvchannel.hpp  uvhttpchannel.hpp
server/: index.js  package-lock.json  package.json
src/: CMakeLists.txt  client.cpp  iresponse-delegate.cpp  reply.cpp  request.cpp
